# xpdf-ffi

./: CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  nixpacks.toml
fofi/: CMakeLists.txt
splash/: CMakeLists.txt
xpdf/: CMakeLists.txt  ffi.cc  ffi.h
